[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "Compare 2 files"
authors = ["SergSm <smirnovserg.s@gmail.com>"]
license = "MIT"
packages = [
    {include = "gendiff"},
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
