[tool.poetry]
name = "hexlet_code"
version = "0.1.0"
description = "Compare 2 files"
authors = ["SergSm <smirnovserg.s@gmail.com>"]
license = "MIT"
packages = [
    {include = "gendiff"},
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.6"
argparse = "^1.4.0"
pytest = "^6.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]