[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Compare 2 files"
authors = ["SergSm <smirnovserg.s@gmail.com>"]
license = "MIT"
packages = [
    {include = "gendiff"},
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.6"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.1"
coverage = {extras = ["toml"], version = "^5.3"}
pyyaml = "^5.3.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
